Fixed the ALC page, folders spacing updated, improve responsiveness, and added a description to the progress

--- a/src/styles/aetaLearningCenter.css
+++ b/src/styles/aetaLearningCenter.css
@@ -48,7 +48,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    margin-top: 510px;
+    margin-top: 75vh;
 }
 
 .folder {
@@ -105,10 +105,10 @@
 
 .folderBody {
     border-top: 2px solid black;
+    /* height: 80vh; */
     z-index: 1;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 30px 0px;
@@ -133,6 +133,8 @@
 }
 
 #folderBody1 {
+    display: flex;
+    height: auto;
     background-color: var(--pallete-yellow);
     padding: 0px;
 }
@@ -182,14 +184,21 @@
     background-color: var(--pallete-purple);
 }
 
-.progressTitleContainer {
+.progressInfoContainer {
     padding: none;
     padding-top: 1rem;
 }
 
+.progressInfoText {
+    background-color: var(--pallete-brightWhite);
+    padding: clamp(1vw, 2vw, 3vw);
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 3px 3px 0px black;
+    pointer-events: all;
+}
+
 .progressTitle {
-    width: 10rem;
-    height: 2rem;
     background-color: var(--pallete-brightWhite);
     border: 1px solid black;
     box-shadow: 3px 3px 0px black;
@@ -200,7 +209,10 @@
 }
 
 .progressImageContainer {
-    padding: 2rem 1rem 7rem 1rem;
+    /* padding: 2rem 1rem 7rem 1rem; */
+    flex-direction: column;
+    gap: 20px;
+    pointer-events: all;
 }
 
 .progressImage {
@@ -214,18 +226,17 @@
         max-width: 25rem;
     }
     .progressImageContainer {
-        padding: 2rem 3rem 4rem 3rem;
+        /* padding: 2rem 3rem 4rem 3rem; */
     }
 }
 
 @media (min-width: 625px){
     .progressTitle{
-        width: 14rem;
-        height: 4rem;
+        padding: clamp(3px, 0.5vw, 7px) clamp(10px, 1vw, 20px);
         font-size: 1rem;
     }
     .progressImageContainer {
-        padding: 2rem 5rem 5rem 5rem;
+        /* padding: 2rem 5rem 5rem 5rem; */
     }
 
     #folderNotch4 {
@@ -279,20 +290,22 @@
 
 @media (min-width: 1077px){
     .progressTitle {
-        width: 17rem;
-        height: 8rem;
-        font-size: 1.5rem;
+        padding: clamp(5px, 0.5vw, 10px) clamp(10px, 1vw, 20px);
+        font-size: 1.2rem;
     }
     .folderBody {
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        gap: clamp(4vw, 5vw, 6vw);
+        padding: 6vh clamp(17vw, 17.5vw, 18vw) 30vh;
     }
 
-    .progressTitleContainer{
-        padding: 2rem 5rem 5rem 5rem;
+    .progressInfoContainer, .progressImageContainer{
+        /* padding: clamp(2vw, 3vw, 4vw); */
     }
 
     .progressImage {
-        max-width: 30rem;
+        max-width: 100%;
     }
 
     .folderDateText {
